RT-20660: EPIC Research: New Content & Styles

--- a/web-content/root/education/EPIC/research.html
+++ b/web-content/root/education/EPIC/research.html
@@ -1,122 +1,136 @@
-<style id="style--abbr-title" type="text/css">
-/* TODO: Add this to global CSS */
-/* FAQ: The global CSS styles this with a border bottom,
-        but neglects to remove browsers' dotted underline style
-        (has style: Firefox, Chrome…; no style: Safari…) */
-        abbr[title] { text-decoration: none; }</style>
 <section class="weteachcs-content">
-	<div class="weteachcs-card weteachcs-card--highlight">
-		<p class="weteachcs-card__content">EPIC supports several research projects related to broadening participation in CS education.</p>
-	</div>
 	<h3>
-		Projects</h3>
+		Current Projects</h3>
 	<h4>
-		ECEP (Expanding Computing Education Pathways)</h4>
+		<dfn><abbr title="Capacity, Access, Participation, Experience">CAPE</abbr></dfn> Framework</h4>
 	<p>
-		ECEP is a collective impact alliance of 22 states and the territory of Puerto Rico. The National Science Foundation (NSF) supports ECEP through its Broadening Participation in Computing Alliance (BPC-A) program. The ECEP Alliance seeks to increase the number and diversity of students in the pipeline to computing and computing-intensive degrees by supporting state-level computing education reforms. Through interventions, pathways, partnerships and models that drive state-level computing education change, ECEP supports states as they work to align their state efforts with the national vision for <em>computer science for <strong>all</strong></em>. The University of Texas at Austin serves as the backbone organizer for <a href="https://ecepalliance.org" target="_blank">ECEP</a>.</p>
-	<h5>Team</h5>
-	<ul>
-		<li>
-			Carol Fletcher, PI</li>
-		<li>
-			Anne Leftwich and Maureen Biggers, Co-PIs, Indiana University</li>
-		<li>
-			Debra Richardson, Co-PI, University of California, Irvine</li>
-		<li>
-			Leigh Ann DeLyser, Co-PI, CSforAll</li>
-		<li>
-			John Goodhue, Co-PI, Massachusetts Green High Performance Computing Center</li>
-		<li>
-			Sarah Dunton, Alliance Director, Massachusetts Green High Performance Computing Center</li>
-	</ul>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a> &amp; <a href="https://www.tacc.utexas.edu/about/directory/jayce-warner">Jayce Warner</a></p>
+	<div class="s-text-figure-pair  clearfix">
+		<figure class="col-sm-5  pull-right">
+			<a href="/documents/1084364/2044593/CAPE_infographic.jpeg" target="_blank"><img class="img-responsive" src="/documents/1084364/2044593/CAPE_infographic.jpeg" title="A pyramid diagram about what EPIC provides through CAPE (Capacity, Access, Participation, Experience) Framework" /></a><figcaption class="sr-only">
+			<p>
+				Examples of equity issues to consider:</p>
+			<dl>
+				<dt>
+					<em>Experience of</em> CS Education</dt>
+				<dd>
+					How does instruction differ across student subgroups?</dd>
+				<dt>
+					<em>Participation in</em> CS Education</dt>
+				<dd>
+					Which student subgroups are underrepresented in CS courses and to what extent?</dd>
+				<dt>
+					<em>Access to</em> CS Education</dt>
+				<dd>
+					Are CS courses offered in low-income schools at similar rates to other schools?</dd>
+				<dt>
+					<em>Capactiy for</em> CS Education</dt>
+				<dd>
+					Do all schools have instructors qualified to teach CS or the resources to train them?</dd>
+			</dl>
+			</figcaption></figure>
+		<p><a href="https://cacm.acm.org/magazines/2021/2/250074-cape/fulltext" target="_blank">CAPE</a> is a framework designed to help education leaders, policy makers, and researchers assess equity in CS education at multiple levels of the educational system. The framework addresses four key components of CS education: Capacity for, Access to, Participation in, and Experience of CS education (CAPE). The pyramid depicted here illustrates how the four components of the framework work progressively, building and relying on the previous component. If students are to have good experiences learning CS, they must first elect to participate in CS courses and programs. If students are to choose to participate in CS, they must first have access to CS courses and programs. If schools are to provide students access to CS, they must first have the capacity to offer CS courses and programs. The core idea of the framework is that there are issues of equity to address at every level.</p>
+	</div>
 	<h4>
-		AWSM in CS</h4>
+		CS Equity Deep Dive</h4>
 	<p>
-		Accelerating Women's Success and Mastery in Computer Science (AWSM in CS) is an NSF funded Research Practitioner Partnership. AWSM in CS supports a Networked Improvement Community of 20+ secondary computing teachers all focused on increasing access and participation of young women in computing courses. This project seeks to apply the tools of improvement science to support teacher-led plan, do, study, act (PDSA) cycles that address this challenge and measure impact on females and particularly females of color.</p>
-	<h5>Team</h5>
-	<ul>
-		<li>
-			Carol Fletcher, PI</li>
-		<li>
-			Joshua Childs, Co-PI, UT Austin College of Education, Educational Leadership</li>
-		<li>
-			Ryan Torbey, GRA</li>
-	</ul>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/jayce-warner">Jayce Warner</a> &amp; <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a></p>
+	<p>
+		CS Equity Deep Dive is a research project funded by a Google Computer Science Education Research (CS-ER) award that examines the factors that are associated with access to and participation in computing in middle and high school, as well as the relationship between secondary enrollment in CS and postsecondary outcomes. The study merges K-12 and college-level data from the Texas Education Research Center, the Stanford Education Data Archive, and the National Student Clearinghouse for over 3 million students to take an in-depth look at the correlates and consequences of disparities in students’ access to and participation in computing education.</p>
 	<h4>
-		Project ROCS (Rural Opportunities in Computer Science)</h4>
+		<abbr title="Expanding Computing Education Pathways">ECEP</abbr> (<dfn>Expanding Computing Education Pathways</dfn>)</h4>
 	<p>
-		Project ROCS aims to produce a framework for collecting and reporting outcome measures that accurately portray the nature and extent of access to and participation in K-12 computer science education, especially for students in rural communities. This research project is funded by Google.</p>
-	<p>
-		The <dfn id="def-cape">CAPE</dfn> Framework was developed as a result of Project ROCS. The purpose of this framework is to help education leaders, policy makers, and researchers assess equity in CS education at multiple levels of the educational system. The framework addresses four key components of CS education: Capacity for, Access to, Participation in, and Experience of CS education (CAPE).</p>
-	<p>
-		Fletcher, C.L. and Warner, J. R., (2019). Summary of the <a href="https://utexas.box.com/s/t0d8mugfd8qvaxwk0uoeaqlxf65bdlrb" title="CAPE Framework Summary Publication">CAPE Framework</a> for Assessing Equity in Computer Science Education. <em>Retrieved from <a href="https://www.tacc.utexas.edu/epic/research">https://www.tacc.utexas.edu/epic/research</a>.</em></p>
-	<h5>Team</h5>
-	<ul>
-		<li>
-			Carol Fletcher, PI</li>
-		<li>
-			Jayce Warner, Co-PI</li>
-		<li>
-			Lisa Garbrecht, Co-PI</li>
-		<li>
-			Ryan Torbey, GRA</li>
-	</ul>
-	<h5>
-		<abbr title="Capacity, Access, Participation, Experience">CAPE</abbr> Framework</h5>
-	<figure>
-		<img class="img-responsive" src="/documents/1084364/1761473/epic-cape.png" title="A pyramid diagram about what EPIC provides through Project ROCS (Rural Opportunities in Computer Science) (caption, for screen readers, describes content)" /> <figcaption class="sr-only">
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+	<div class="s-text-figure-pair  clearfix">
+		<figure class="col-sm-5  pull-right">
+			<a href="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" target="_blank"><img class="img-responsive" src="/documents/1084364/2044593/2019a_ECEP_Map_Phases_purplehues.jpeg" title="A map of the U.S. states &mp; terrirories in the ECEP alliance" /></a><figcaption class="sr-only">
+			<h5>
+				23 ECEP States & U.S. Territories</h5>
+			<h6>
+				Expanding Computing Education Pathways</h6>
+			<dl>
+				<dt>
+					ECEP Origin States</dt>
+				<dd>
+					<ul>
+						<li>GA</li>
+						<li>MA</li>
+						</ul></dd>
+				<dt>
+					Phase 1</dt>
+				<dd>
+					<ul>
+						<li>CA</li>
+						<li>SC</li>
+						</ul></dd>
+				<dt>
+					Phase 2</dt>
+				<dd>
+					<ul>
+						<li>AL</li>
+						<li>CT</li>
+						<li>IN</li>
+						<li>MD</li>
+						<li>NH</li>
+						<li>PR</li>
+						<li>UT</li>
+						<li>TX</li>
+						</ul></dd>
+				<dt>
+					Phase 3</dt>
+				<dd>
+					<ul>
+						<li>AR</li>
+						<li>NC</li>
+						<li>NV</li>
+						<li>RI</li>
+						<li>VA</li>
+						</ul></dd>
+				<dt>
+					Phase 4</dt>
+				<dd>
+					<ul>
+						<li>HI</li>
+						<li>MN</li>
+						<li>MS</li>
+						<li>OH</li>
+						<li>OR</li>
+						<li>WA</li>
+						</ul></dd>
+			</dl>
+			</figcaption></figure>
 		<p>
-			Examples of equity to assess:</p>
-		<dl>
-			<dt>
-				<em>Experience of</em> <abbr title="Computer Science">CS</abbr> Education</dt>
-			<dd>
-				<strong>Student outcomes</strong>
-				<ul>
-					<li>
-						How does the quality of instruction differ across subgroups of students?</li>
-					<li>
-						How does this affect learning?</li>
-				</ul>
-			</dd>
-			<dt>
-				<em>Participation in</em> <abbr title="Computer Science">CS</abbr> Education</dt>
-			<dd>
-				<strong>Student enrollment</strong>
-				<ul>
-					<li>
-						Which subgroups are underrepresented in CS courses?</li>
-					<li>
-						To what extent?</li>
-				</ul>
-			</dd>
-			<dt>
-				<em>Access to</em> <abbr title="Computer Science">CS</abbr> Education</dt>
-			<dd>
-				<strong>Course offerings</strong>
-				<ul>
-					<li>
-						Are CS courses offered in low-income schools at similar rates to other schools?</li>
-				</ul>
-			</dd>
-			<dt>
-				<em>Capactiy for</em> <abbr title="Computer Science">CS</abbr> Education</dt>
-			<dd>
-				<strong>Teachers, funding, policies</strong>
-				<ul>
-					<li>
-						Do districts in all areas have the resources to train and certify teachers?</li>
-				</ul>
-			</dd>
-		</dl>
-		</figcaption></figure>
-	<hr />
+			<a href="https://ecepalliance.org/" target="_blank">ECEP</a> is a collective impact alliance of 22 states and the territory of Puerto Rico. The National Science Foundation (NSF) supports ECEP through its Broadening Participation in Computing Alliance (BPC-A) program. The ECEP Alliance seeks to increase the number and diversity of students in the pipeline to computing and computing-intensive degrees by supporting state-level computing education reforms. Through interventions, pathways, partnerships and models that drive state-level computing education change, ECEP supports states as they work to align their state efforts with the national vision for <em>computer science for <strong>all</strong></em>. The University of Texas at Austin serves as the backbone organizer for ECEP.</p>
+	</div>
+	<h4>
+		Quantifying Disparities in CS Education</h4>
+	<p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/jayce-warner">Jayce Warner</a> &amp; <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+	<p>
+		The purpose of this project is to identify effective methods for measuring inequities in CS education. One metric developed out of this project is the <a href="https://vimeo.com/545193033" target="_blank">disparity index</a>, which can be used to quantify disparities between student subgroups in a way that makes for more accurate comparisons of inequities across populations of different sizes</p>
+	<h4>
+		<dfn><abbr title="Accelerating Women's Success and Mastery">AWSM</abbr></dfn> in CS</h4>
+	<p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+	<div class="clearfix">
+		<img class="col-xs-3  col-sm-2  pull-left  img-responsive" src="/documents/1084364/2044593/AWSM_logo.svg" title="The logo of AWSM in CS (Accelerating Women's Success and Mastery in Computer Science)" />
+		<p>
+			Accelerating Women's Success and Mastery in Computer Science (AWSM in CS) is an NSF funded Research Practitioner Partnership. AWSM in CS supports a Networked Improvement Community of 20+ secondary computing teachers all focused on increasing access and participation of young women in computing courses. This project seeks to apply the tools of improvement science to support teacher-led plan, do, study, act (PDSA) cycles that address this challenge and measure impact on females and particularly females of color.</p>
+	</div>
+	<h4>
+		<dfn>Motivation to Teach Computer Science</dfn> (<abbr>MTCS</abbr>) Scale</h4>
+	<p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/nicole-martin">Nicole Martin</a></p>
+	<p>
+		The MTCS scale was developed to understand why teachers chose to teach computer science (CS). Grounded in self-determination theory, the scale characterizes teachers’ motivation to teach CS on a continuum from external to increasingly internal motivation. The MTCS scale consists of 18 items with Likert-type response options, and results from factor analyses show that the scale has internal reliability and construct validity. This measure can be used by researchers and practitioners to investigate the motivations of CS teachers and use that understanding to strengthen <abbr title="Computer Science education">CSEd</abbr> by addressing challenges related to recruiting, preparing, and retaining teachers.</p>
 	<h3>
 		Resources</h3>
 	<h4>
-		Computer Science Regional Data</h4>
+		<a href="https://bit.ly/TXCSEd" target="_blank">Texas Computer Science Data Dashboard</a></h4>
 	<p>
-		The Computer Science Regional Data reports were created to help educational service centers (ESC's), school districts, and anyone interested in the progress of computer science education in Texas to better understand the data we have collected. You may download these pdf's to share/distribute.</p>
+		The Texas Computer Science Data Dashboardprovides an in-depth look at the state of K-12 computer science education data in Texas through an interactive data platform. Users can explore maps, graphs, and other visualizations to examine trends in computer science education over time at the state, region, district, or school level.</p>
+	<h4>
+		<a href="https://docs.google.com/document/d/1au6RsGbS1rN6-rBobHl2G_7ag5QHRSGvyOSGM9Dr47o/" target="_blank"><abbr title="Accelerating Women's Success and Mastery">AWSM</abbr> Strategies for Inclusive Computer Science Classrooms</a></h4>
 	<p>
-		<em><a href="/epic/weteachcs/cs-regional-data">Browse <span class="sr-only">Computer Science Regional Data</span> reports</a></em></p>
+		Created to connect teachers with instructional materials designed to broaden participation in computer science, this documentoutlines five research-backed strategies for inclusive computer science classrooms and provides recommended resources for each strategy.</p>
 </section>
