RT-17685: EPIC: Fix Stem Programs Content Markup

--- a/web-content/root/education/stem-programs--content.html
+++ b/web-content/root/education/stem-programs--content.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-	video,
+video,
 	/* Keep message the same horizontal position as the video */
 	.notice--covid-19{
 		width:100%;
@@ -15,41 +15,40 @@
 	.notice--covid-19 p:last-of-type {
 		margin-bottom: 0;
 	}</style>
-	<div class="row">
-		<div class="col-sm-9">
-			<div class="portlet-msg-info notice--covid-19">
-				<p>
-					Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</p>
-			</div>
-			<h3>
-				Program Spotlight</h3>
-			<!-- <div class="embed-repsonsive embed-responsive-4by3">
+<div class="row">
+	<div class="col-sm-9">
+		<div class="portlet-msg-info notice--covid-19">
+			<p>
+				Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</p>
+		</div>
+		<h3>
+			Program Spotlight</h3>
+		<!-- <div class="embed-repsonsive embed-responsive-4by3">
 					<iframe class="embed-responsive-item" src="https://player.vimeo.com/246024459/61332e7bf5"></iframe>
 				</div> --><!-- <a><img alt="Screenshot TACC Robotics" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeTACCRobotics.png" style="width: 768px;" /></a>  -->
-			<video controls="" height="432" poster="https://www.tacc.utexas.edu/documents/1084364/1158641/robotics-video.png" width="768">
-				<source codecs="avc1.42E01E, mp4a.40.2" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeatTACC.mp4" type="video/mp4"> </source></video>
-			<p>
-				Code@TACC Robotics provides an introduction to programming, robotics and electronics</p>
-		</div>
-		<div class="col-md-3">
+		<video controls="" height="432" poster="https://www.tacc.utexas.edu/documents/1084364/1158641/robotics-video.png" width="768">
+			<source codecs="avc1.42E01E, mp4a.40.2" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeatTACC.mp4" type="video/mp4"> </source></video>
+		<p>
+			Code@TACC Robotics provides an introduction to programming, robotics and electronics</p>
+	</div>
+	<div class="col-md-3">
+		<h3>
+			Tours</h3>
+		<p>
+			<button class="btn btn-warning btn-block btn-lg" disabled="disabled" href="/web/website/education/tours/schedule" style="text-align:center;">Request a Tour</button></p>
+		<!--<p style="color:red;"><strong>Attention K-12 groups: We have reached capacity for tours for the period of June 1-August 7, 2016. We are welcoming tour requests for tours after August 7, 2016. Thank you.</strong></p>-->
+		<p>
+			In addition to summer programming, TACC provides educational tours throughout the year to increase awareness about the impact of science and technology; get students excited about STEM careers; and help students make the connection between STEM careers and their everyday lives.</p>
+		<hr />
+		<div>
 			<h3>
-				Tours</h3>
+				Sponsors</h3>
 			<p>
-				<button disabled class="btn btn-warning btn-block btn-lg" href="/web/website/education/tours/schedule" style="text-align:center;">Request a Tour</button></p>
-			<!--<p style="color:red;"><strong>Attention K-12 groups: We have reached capacity for tours for the period of June 1-August 7, 2016. We are welcoming tour requests for tours after August 7, 2016. Thank you.</strong></p>-->
-			<p>
-				In addition to summer programming, TACC provides educational tours throughout the year to increase awareness about the impact of science and technology; get students excited about STEM careers; and help students make the connection between STEM careers and their everyday lives.</p>
-			<hr />
-			<div>
-				<h3>
-					Sponsors</h3>
-				<p>
-					The following programs have been sponsored by Cisco, Dell, National Science Foundation, the KLE Foundation, Summer STEM Investment Hub, and Verizon.</p>
-			</div>
+				The following programs have been sponsored by Cisco, Dell, National Science Foundation, the KLE Foundation, Summer STEM Investment Hub, and Verizon.</p>
 		</div>
 	</div>
+</div>
 	<div>
-		<source codecs="avc1.42E01E, mp4a.40.2" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeatTACC.mp4" type="video/mp4"></source>
 		<div class="row">
 			<div class="col-sm-12">
 				<h3 id="k12-programs">
@@ -113,8 +112,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="row">
-					<!-- RT-20572: Archived, ETA unknown (since 2021-10-13) -->
-					<!--
+					<!-- RT-20572: Archived, ETA unknown (since 2021-10-13) --><!--
 					<div class="col-md-6">
 						<img alt="Star Scholars Program" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/star.png" style="" />
 						<h5 style="margin-bottom:0px;">
@@ -123,8 +121,7 @@
 							Academic year-long research opportunities for UT students</p>
 					</div>
 					<div class="col-md-6">
-					-->
-					<!-- RT-20572: Enlarged, since archive of Star Scholars -->
+					--><!-- RT-20572: Enlarged, since archive of Star Scholars -->
 					<div class="col-md-12">
 						<img alt="SPICE - Supporting Pacific Indigenous Computing Excellence" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/spice-header.png" style="" />
 						<h5 style="margin-bottom:0px;">
