--- a/web-content/root/education/stem-programs--content-bottom.html
+++ b/web-content/root/education/stem-programs--content-bottom.html
@@ -6,20 +6,20 @@
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<!--<img alt="Wearables Camp" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/studentproject-lg.png" style="" />
+		<!-- FAQ: Archive Content (since unknown date) --><!--<img alt="Wearables Camp" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/studentproject-lg.png" style="" />
 		<h5 style="margin-bottom:0px;">
 			<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/wearables-2018" target="_blank"> Code@TACC Wearables Camp</a></h5>
 		<p style="margin-top:2px;">
 			Cloud computing, progressive web application development, electronics and the Internet of Things.</p>--><img alt="Back@TACC" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/back-at-tacc.jpg/" />
 		<h5 style="margin-bottom:0px;">
-			<a href="https://utexas.qualtrics.com/jfe/form/SV_8CbPYK9AUcdLxBz" target="_blank">Back@TACC</a></h5>
+			<a href="https://utexas.qualtrics.com/jfe/form/SV_8CbPYK9AUcdLxBz" target="_blank">Code@TACC Alumni</a></h5>
 		<p style="margin-top:2px;">
 			Quarterly STEM Workshops for past and prospective camp participants and families</p>
 	</div>
 	<div class="col-md-6">
 		<div class="row">
 			<div class="col-md-6">
-				<img alt="Code@TACC Robotics Students working on project" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/code-robotics.jpg/" style="" />
+				<img alt="Code@TACC Robotics Students working on project" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/code-robotics.jpg/" />
 				<h5 style="margin-bottom:0px;">
 					<a href="https://utexas.qualtrics.com/jfe/form/SV_8CbPYK9AUcdLxBz" target="_blank">Code@TACC Robotics Camp</a></h5>
 				<p style="margin-top:2px;">
@@ -35,7 +35,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<img alt="Cybersecurity Camp" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/code-cybersecurity.jpg/" style="" />
+				<img alt="Cybersecurity Camp" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/code-cybersecurity.jpg/" />
 				<h5 style="margin-bottom:0px;">
 					<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/cybersecurity" target="_blank"> Code@TACC Cybersecurity Camp</a></h5>
 				<p style="margin-top:2px;">
@@ -72,7 +72,7 @@
 			<div class="col-md-6">
 			--><!-- RT-20572: Enlarged, since archive of Star Scholars -->
 			<div class="col-md-12">
-				<img alt="SPICE - Supporting Pacific Indigenous Computing Excellence" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/spice-header.png" style="" />
+				<img alt="SPICE - Supporting Pacific Indigenous Computing Excellence" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/spice-header.png" />
 				<h5 style="margin-bottom:0px;">
 					<a href="https://www.tacc.utexas.edu/partnerships/spice" target="_blank"> Supporting Pacific Indigenous Computing Excellence (SPICE)</a></h5>
 				<p style="margin-top:2px;">
@@ -95,7 +95,7 @@
 			<a href="http://code.tacc.utexas.edu/en" target="_blank">Code@TACC Curriculum</a></h5>
 		<p style="margin-top:2px;">
 			Open source resources that support informal and formal STEM education</p>
-		<!-- <p style="margin-top:2px;">
+		<!-- FAQ: Archive Content (since unknown date) --><!-- <p style="margin-top:2px;">
 		Introduction to programming, robotics, and electronics</p> --><!--  make sure to include the Robotics camp video --></div>
 	<div class="col-md-6">
 		<div class="row">
@@ -115,7 +115,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-6">
+	<!-- RT-17685: Archive Content (since 2021-11-01) --><!--<div class="col-md-6">
 		<div class="row">
 			<div class="col-md-6">
 				<img alt="" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/raspberryteach.png" />
@@ -131,6 +131,6 @@
 				<p>
 					Computer Science competition</p>
 			</div>
-		</div>
+		</div>-->
 	</div>
 </div>
