RT-20469: Add Juliana Duncan to staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -365,6 +365,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/juliana-duncan">Duncan, Juliana</a></td>
+			<td>
+				<a href="mailto:jduncan@tacc.utexas.edu">jduncan@tacc.utexas.edu</a></td>
+			<td>
+				Scalable Computational Intelligence</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/matthew-edeker">Edeker, Matthew</a></td>
 			<td>
 				<a href="mailto:medeker@tacc.utexas.edu">medeker@tacc.utexas.edu</a></td>
