RT-20492/RT-20298/RT-20299/RT-20302: Add staff

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -653,6 +653,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/madeline-haynes">Haynes, Madeline</a></td>
+			<td>
+				<a href="mailto:mhaynes@tacc.utexas.edu">mhaynes@tacc.utexas.edu</a></td>
+			<td>
+				Expanding Pathways in Computing (EPIC)</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/chris-hempel">Hempel, Chris</a></td>
 			<td>
 				<a href="mailto:hempel@tacc.utexas.edu">hempel@tacc.utexas.edu</a></td>
@@ -997,6 +1005,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/ian-park">Park, Ian (Eun Chan)</a></td>
+			<td>
+				<a href="mailto:ipark@tacc.utexas.edu">ipark@tacc.utexas.edu</a></td>
+			<td>
+				Web &amp; Mobile Applications</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/jonathan-peacher">Peacher, Jonathan</a></td>
 			<td>
 				<a href="mailto:djpeacher@tacc.utexas.edu">djpeacher@tacc.utexas.edu</a></td>
@@ -1317,11 +1333,19 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/joseph-vantassel">Vantassel, Joseph</a></td>
+			<td>
+				<a href="mailto:jvantassel@tacc.utexas.edu">jvantassel@tacc.utexas.edu</a></td>
+			<td>
+				<a name="V"></a> HPC Applications</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/matthew-vaughn" t3url="1150">Vaughn, Matthew</a></td>
 			<td>
 				<a href="mailto:vaughn@tacc.utexas.edu">vaughn@tacc.utexas.edu</a></td>
 			<td>
-				<a name="V"></a> Life Sciences Computing</td>
+				Life Sciences Computing</td>
 		</tr>
 		<tr>
 			<td>
@@ -1434,6 +1458,14 @@
 				<a href="mailto:szeller@tacc.utexas.edu">szeller@tacc.utexas.edu</a></td>
 			<td>
 				<a name="Z"></a> Scalable Visualization Technologies, Visualization Interfaces &amp; Applications</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/wenyang-zhang">Zhang, Wenyang</a></td>
+			<td>
+				<a href="mailto:wzhang@tacc.utexas.edu">wzhang@tacc.utexas.edu</a></td>
+			<td>
+				HPC Applications</td>
 		</tr>
 		<tr>
 			<td>
