RT-20783: Change Links. Drop Sentence.

--- a/web-content/root/education/EPIC/WeTeach_CS/code-org.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/code-org.html
@@ -247,7 +247,7 @@ Style guide: components.weteachcs.cta
 	<p>
 		Computer Science Discoveries is appropriate for 6-10th-grade students and can be taught as a semester or year-long introductory course (3-5 hours per week of instruction for 9+ weeks). The course takes a wide lens on computer science by covering topics such as programming, physical computing, HTML/CSS, and data. The course inspires students as they build their own websites, apps, games, and physical computing devices.</p>
 	<p>
-		<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2021-CSD-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Discoveries"</span></a></p>
+		<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-CSD-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Discoveries"</span></a></p>
 	<p>
 		&nbsp;</p>
 	<h5>
@@ -255,9 +255,7 @@ Style guide: components.weteachcs.cta
 	<p>
 		Computer Science Principles introduces students to the foundational concepts of computer science and challenges them to explore how computing and technology can impact the world. More than a traditional introduction to programming, it is a rigorous, engaging, and approachable course that explores many of the foundational ideas of computing so all students understand how these concepts are transforming the world we live in.</p>
 	<p>
-		If you are interested in either of these courses please fill out the Code.org application to participate in the 2020-2021 cohort.</p>
-	<p>
-		<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2021-CSP-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Principles"</span></a></p>
+		<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-CSP-5day/" target="_blank">Apply Here<span class="sr-only"> for WeTeach_CS "CS Principles"</span></a></p>
 	<p>
 		&nbsp;</p>
 </section>
