Quick: Update training-events based on CMS content

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -11,7 +11,7 @@
 		<a href="https://sc21.supercomputing.org/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/sc21.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://sc21.supercomputing.org/" target="_blank"><abbr title="Supercomputing 2021 (Conference)">SC2021</abbr></a><br />
+			<a href="https://sc21.supercomputing.org/" target="_blank">The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC21)</a><br />
 			November 14th – 19th</p>
 	</div>
 </div>
