RT-20676: EPIC: Publications: Use <p> not <table>

--- a/web-content/root/education/EPIC/Research/publications.html
+++ b/web-content/root/education/EPIC/Research/publications.html
@@ -1,54 +1,28 @@
 <h3>
 	Publications</h3>
-<table class="weteachcs-table">
-	<tbody>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Sexton, S., Ryoo, J., Garbrecht, L., &amp; Fall, R. (2020, September 16). <em>Dimensions of equity in RPPs - A framework to guide partnership discussions.</em> "National Network of Education Research-Practice Partnerships (NNERPP) Extra," 2(3), 12-18.</td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Fletcher, C.L. and Warner, J. R., (2020). <em>Summary of the CAPE Framework for Assessing Equity in Computer Science Education.</em> Retrieved from <a href="https://www.tacc.utexas.edu/epic/research">https://www.tacc.utexas.edu/epic/research</a>.</td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Osman, D. J., &amp; Warner, J. R. (2020). <em>Measuring teacher motivation: The missing link between professional development and practice.</em> "Teaching and Teacher Education, 92", 103064.</td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Torbey, R., Martin, N.D., Warner, J.R, Fletcher, C.L. (2020). "Algebra I Before High School as a Gatekeeper to Computer Science Participation". SIGCSE ‘20 Proceedings of the 51st ACM Technical Symposium on Computer Science Education.</td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Warner, J. R., Fletcher, C. L., Torbey, R., Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In "Proceedings of the 50th ACM Technical Symposium on Computer Science Education SIGCSE '19", 1157-1163. ACM. <a href="https://doi.org/10.1145/3287324.3287418" target="_blank">https://doi.org/10.1145/3287324.3287418</a></td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Fletcher, C.L. &amp; Ramchand, R. (2018). "Preparing Texas Students for the Cyber Economy". Austin, TX: The University of Texas at Austin. Retrieved from <a href="https://www.tacc.utexas.edu/epic/research/presentations-and-publications">https://www.tacc.utexas.edu/epic/research/presentations-and-publications</a></td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Warner, J. R., Fletcher, C. L., Monroe, W., &amp; Garbrecht, L. S. (2018). <em>Growing the High School CS Teacher Workforce: Predictors of Success in Achieving CS Certification [Poster].</em> In "Proceedings of the 49th ACM Technical Symposium on Computer Science Education". ACM <a href="https://doi.org/10.1145/3159450.3162278" target="_blank">https://doi.org/10.1145/3159450.3162278</a></td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Warner, J. R., Junk, D. L., Osman, D. J., Schallert, D. L., &amp; Gámez, C. (2016, April). "Creative construction or spotty uptake?: Propagating a professional development from trainer to facilitator to teacher" [Paper presentation]. American Educational Research Association Annual Meeting, Washington, D.C.</td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Adrion, W.R., Dunton, S., Ericson, B., Fall, R., Fletcher, C., Guzdial, M. (2020, December). <em>U.S. States Must Broaden Participation While Expanding Access to Computer Science Education. Communications of the ACM</em>, 63(12), 22-25, <a href="https://doi.org/10.1145/3430375" target="_blank">https://doi.org/10.1145/3430375</a></td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Cuny, J. E., Payton, J., Gates, A., Fletcher, C. L., &amp; Peterfreund, A. (2020). <em>National CS Ed Equity-Focused Consortia and Their Value to the Community. Proceedings of the 51st ACM Technical Symposium on Computer Science Education</em>, Portland, OR, USA. <a href="https://doi.org/10.1145/3328778.3366982" target="_blank">https://doi.org/10.1145/3328778.3366982</a></td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Fletcher, C.L., Torbey, R., Childs, J., Zarch, R. (2020) "Reflections on Launching a Networked Improvement Community with Computer Science Educators". Paper presented at RESPECT , Portland, OR, USA. <a href="http://respect2020.stcbp.org/digital-proceedings/" target="_blank">http://respect2020.stcbp.org/digital-proceedings/</a></td>
-		</tr>
-		<tr>
-			<td class="weteachcs-table__cite">
-				Odom-Bartel, R., Fletcher, C., Owen, J., Gray, J., &amp; Zelkowski, J. (February, 2020). "Preparing Pre-Service Teacher Candidates for the Praxis Exam: An Innovative Model of Blended Support". SIGCSE'20: Proceedings of the 51st ACM Technical Symposium on Computer Science Education, pp 1298. <a href="https://doi.org/10.1145/3328778.3372654" target="_blank">https://doi.org/10.1145/3328778.3372654</a></td>
-		</tr>
-	</tbody>
-</table>
+<div class="weteachcs-table">
+	<p>
+		Warner, J. R., Fletcher, C. L., Martin, N. D., Baker, S. N., (in press). Applying the CAPE framework to measure equity and inform policy in computer science education. <em>Policy Futures in Education</em>.</p>
+	<p>
+		Warner, J. R., Plowman, D. L., Osman, D. J., &amp; Schallert, D. L. (in press). The influence of collective and individual sensemaking on how facilitators and teachers implement a professional development programme. <em>Teacher Development</em>.</p>
+	<p>
+		Fletcher, C. L. &amp; Warner, J. R. (in press). Leveraging collective impact to scale computer science teacher professional development and certification. In Mouza, C., Yadav, A., &amp; Leftwich, A. (Eds.), <em>Preparing Teachers to Teach Computer Science: Models, Practices and Policies</em>. Information Age Publishing.</p>
+	<p>
+		Fletcher, C. L. &amp; Warner, J.R. (2021). CAPE: A Framework for Assessing Equity throughout the Computer Science Education Ecosystem. <em>Communications of the ACM</em>, <em>64</em>(2), 23-25. <a href="https://doi.org/10.1145/3442373" target="_blank">https://doi.org/10.1145/3442373</a></p>
+	<p>
+		Warner, J. R., Childs, J., Fletcher, C. L., Martin, N. D., &amp; Kennedy, M. (2021). Quantifying disparities in computer science education: Access, participation, and intersectionality. In <em>Proceedings of the 52</em><em><sup>nd</sup> ACM Technical Symposium on Computer Science Education</em>, 619-625. <a href="https://doi.org/10.1145/3408877.3432392" target="_blank">https://doi.org/10.1145/3408877.3432392</a></p>
+	<p>
+		Osman, D. J., &amp; Warner, J. R. (2020). Measuring teacher motivation: The missing link between professional development and practice. <em>Teaching and Teacher Education, 92, </em>103064. <a href="https://doi.org/10.1016/j.tate.2020.103064" target="_blank">https://doi.org/10.1016/j.tate.2020.103064</a></p>
+	<p>
+		Torbey, R., Martin, N. D., Warner, J. R., &amp; Fletcher, C. L. (2020). Algebra I before high school as a gatekeeper to computer science participation. In <em>Proceedings of the 51st ACM Technical Symposium on Computer Science Education</em>, 839-844. ACM. <a href="https://doi.org/10.1145/3328778.3366877" target="_blank">https://doi.org/10.1145/3328778.3366877</a></p>
+	<p>
+		Sexton, S., Ryoo, J., Garbrecht, L., &amp; Fall, R. (2020). Dimensions of equity in RPPs - A framework to guide partnership discussions. <em>NNERPP Extra, 2</em>(3), 12-18. <a href="http://nnerppextra.rice.edu/dimensions-of-equity-in-rpps-a-framework">http://nnerppextra.rice.edu/dimensions-of-equity-in-rpps-a-framework</a></p>
+	<p>
+		Adrion, W. R., Dunton, S., Ericson, B., Fall, R., Fletcher, C. L., Guzdial, M. (2020) U.S. states must broaden participation while expanding access to computer science education. <em>Communications of the ACM, 63</em>(12), 22-25. <a href="https://doi.org/10.1145/3430375">https://doi.org/10.1145/3430375</a></p>
+	<p>
+		Fletcher, C.L., Torbey, R., Childs, J., Zarch, R. (2020) Reflections on launching a networked improvement community with computer science educators. In <em>2020 Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT) Conference Proceedings</em>. <a href="https://doi.org/10.1109/RESPECT49803.2020.9272443">https://doi.org/10.1109/RESPECT49803.2020.9272443</a></p>
+	<p>
+		Warner, J. R., Fletcher, C. L., Torbey, R., &amp; Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In <em>Proceedings of the 50</em><em><sup>th</sup> ACM Technical Symposium on Computer Science Education SIGCSE ’19</em>, 1157-1163. ACM. <a href="https://doi.org/10.1145/3287324.3287418" target="_blank">https://doi.org/10.1145/3287324.3287418</a></p>
+	<p>
+		Fletcher, C.L. &amp; Ramchand, R. (2018). <em>Preparing Texas students for the cyber economy</em>. The University of Texas at Austin. <a href="https://utexas.app.box.com/s/d2nal1mh7amk9g6hfl99f4suui5niubi">https://utexas.app.box.com/s/d2nal1mh7amk9g6hfl99f4suui5niubi</a></p>
+</div>
